--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@
 
 body {
   background: lightslategrey;
-   background: url("../images/wallpaper1.jpg");
+   background: url("../images/wallpaper2.jpeg");
    background-attachment: fixed;
 
 }
